# EncryptedKMeans

./: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  README.md  build.ninja  checking_something.py  cmake_install.cmake  config.json  fcout  main.cpp  package.json  properties.h
.cmake/api/v1/reply/: cache-v2-2345f31a9001a923f15a.json  cmakeFiles-v1-1b5b931498446ceb52f1.json  codemodel-v2-96e4fd1cce5f5a6fc55c.json  directory-_deps.json-build-Debug-8af1941046ca7ce40604.json  directory-_deps.json-build.test-Debug-494ca97b19b4abee0be8.json  directory-_deps.json-build.test.cmake_add_subdirectory-Debug-99922224a9227031c01f.json  directory-_deps.json-build.test.cmake_import-Debug-15d0b34f4e6a04064244.json  directory-_deps.json-build.test.cmake_import_minver-Debug-364375b70821137e99f8.json  index-2022-03-03T16-25-31-0244.json  target-Continuous-Debug-7d60bbbf0b365323c079.json  target-ContinuousBuild-Debug-3ae3b3d567fd8cc535a6.json  target-ContinuousConfigure-Debug-62543b7da2fc00c5e906.json  target-ContinuousCoverage-Debug-1ccb64d996fd5ba87c7e.json  target-ContinuousMemCheck-Debug-d8b81262491794bd8d5e.json  target-ContinuousStart-Debug-153a0832d38660f8a438.json  target-ContinuousSubmit-Debug-7b73733261708bcfbf35.json  target-ContinuousTest-Debug-e1390b1d05ccbafc30c7.json  target-ContinuousUpdate-Debug-65143e237b518c6853dd.json  target-EncryptedKMeans-Debug-008e966dd886405038e1.json  target-Experimental-Debug-d75ae4fb09236de730be.json  target-ExperimentalBuild-Debug-8bd65f4d031b97d717a7.json  target-ExperimentalConfigure-Debug-63f691e55746b1ecee9d.json  target-ExperimentalCoverage-Debug-758e631a16a8e4211f36.json  target-ExperimentalMemCheck-Debug-8ee575788ea9336bd29a.json  target-ExperimentalStart-Debug-0b67c3814ebf33f17965.json  target-ExperimentalSubmit-Debug-e7eff186151ed7e75ad1.json  target-ExperimentalTest-Debug-ad72417d0a7bc0d992c4.json  target-ExperimentalUpdate-Debug-af930b289ba51a0cb8e0.json  target-Nightly-Debug-3f22bc3433af7756d6be.json  target-NightlyBuild-Debug-752000db33a4a04c09c8.json  target-NightlyConfigure-Debug-8201f66489b9a18ecddb.json  target-NightlyCoverage-Debug-8888e8cb9c7f89508512.json  (+50 more)
io/: 0_chosen  1_chosen  2021-12-01-02-23-02-coreset.csv  2021_12_01_02_30_31_coreset.csv  2021_12_01_02_39_04_coreset.csv  2021_12_01_02_39_06_coreset.csv  2021_12_01_02_41_58_coreset.csv  2021_12_01_02_42_00_coreset.csv  2021_12_01_03_21_21_coreset.csv  2021_12_01_03_21_25_coreset.csv  2021_12_01_04_05_59_coreset.csv  2021_12_01_04_12_46_coreset.csv  2021_12_01_04_38_40_coreset.csv  2021_12_01_04_38_5110_chosen  2021_12_01_04_38_5111_chosen  2021_12_01_04_38_514_chosen  2021_12_01_04_38_516_chosen  2021_12_01_04_38_51leftover  2021_12_01_04_38_51means  2021_12_01_04_38_51points  2021_12_01_04_38_51rand_means  2021_12_01_05_23_51_11_chosen  2021_12_01_05_23_51_12_chosen  2021_12_01_05_23_51_13_chosen  2021_12_01_05_23_51_14_chosen  2021_12_01_05_23_51_1_chosen  2021_12_01_05_23_51_2_chosen  2021_12_01_05_23_51_6_chosen  2021_12_01_05_23_51_7_chosen  2021_12_01_05_23_51_8_chosen  2021_12_01_05_23_51_9_chosen  2021_12_01_05_23_51_leftover  2021_12_01_05_23_51_means  2021_12_01_05_23_51_points  2021_12_01_05_23_51_rand_means  2022_03_03_18_53_46_0_chosen  2022_03_03_18_53_46_12_chosen  2022_03_03_18_53_46_2_chosen  2022_03_03_18_53_46_3_chosen  2022_03_03_18_53_46_6_chosen  (+541 more)
src/: Client.cpp  Client.h  ClientDevice.cpp  ClientDevice.h  DataServer.cpp  DataServer.h  KeysServer.cpp  KeysServer.h  Point.cpp  Point.h
src/coreset/: client.py  run1meancore.cpp  server.py  simulator.py
src/yonis/: client.py  crypto_authority.py  run1meancore.cpp  run1meancore.h  server.py  simulator.py  utils.py
tests/: TestAux.cpp  TestAux.h  TestClient.cpp  TestClient.h  TestDataServer.cpp  TestDataServer.h  TestKeysServer.cpp  TestKeysServer.h  TestPoint.cpp  TestPoint.h  test.cpp
utils/: Logger.cpp  Logger.h  aux.cpp  aux.h
